# t1-python-daemon-git

./: ANALYSIS.md  __init__.py  cli.py  config.py  daemon-git-sync.bat  pyproject.toml
daemon_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
